BusOne/src/objects/Multichannel_Message_vod__c.object
<CustomObject>
    <description>Multichannel_Message_vod stores HTML which will be referenced by the Multichannel Engine to display to end users.</description>
    <fields>
        <fullName>Event_Attendee_Status_vod__c</fullName>
        <description>Event_Attendee_Status_vod picklist value defines what the status of the of the attendee should be updated to in EM_Attendee_vod.Status_vod.</description>
        <label>Event Attendee Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accepted_vod</fullName>
                </value>
                <value>
                    <fullName>Rejected_vod</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HTML_Message_vod__c</fullName>
        <description>HTML_Message_vod holds the HTML that will displayed when the Multichannel_Message_vod record is referenced.</description>
        <label>HTML Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Language_vod__c</fullName>
        <description>The language of the text that the HTML code will display to the recipient.</description>
        <label>Language</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MC_Activity_RecordType_vod__c</fullName>
        <description>The recordtype of the Multichannel_Activity_vod that needs to be created when the Multichannel Message is executed.</description>
        <label>MC Activity RecordType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message_Identifier_vod__c</fullName>
        <description>Identifier used to find which Multichannel_Message_vod is in to be used.</description>
        <label>Message Identifier</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Multichannel Message</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Multichannel Message Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Multichannel Messages</pluralLabel>
    <recordTypes>
        <fullName>Approved_Email_Action_vod</fullName>
        <active>true</active>
        <description>Record type of those Multichannel_Message_vod records used as a parameter for Approved Email Actions.</description>
        <label>Approved_Email_Action_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Double_Opt_In_vod</fullName>
        <active>true</active>
        <description>Record type of those Multichannel_Message_vod records used as a parameter for double opt in.</description>
        <label>Double_Opt_In_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Events_Management_Action_vod</fullName>
        <active>true</active>
        <description>Record type of those Multichannel_Message_vod records used as a parameter for Events Management Actions</description>
        <label>Events_Management_Action_vod</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>